# wtxr

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: logger.rs  main.rs  spinner.rs
src/adapter/: filesystem.rs  git.rs  hook.rs  mod.rs
src/cli/: add.rs  init.rs  list.rs  mod.rs  remove.rs
src/config/: loader.rs  mod.rs  paths.rs  types.rs
src/domain/: error.rs  mod.rs  worktree.rs
src/port/: filesystem.rs  git.rs  hook.rs  mod.rs
src/tui/: select.rs
src/usecase/: add.rs  init.rs  list.rs  mod.rs  remove.rs
