[package]
name = "wtxr"
version = "0.1.0"
edition = "2021"
description = "A git worktree management CLI tool"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 設定ファイル
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# エラー処理
anyhow = "1"
thiserror = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# ターミナルカラー
colored = "2"

# ホームディレクトリ
dirs = "5"

# globパターン
glob = "0.3"
